<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fornecedor_servico"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.pe.recife.tafeito.gui.FornecedorServicoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_gravity="center"
        android:text="@string/servico"
        android:textSize="20sp"
        android:textColor="#fff"
        />

    <!-- categoria-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/categoria"
            android:textSize="18sp"
            android:textColor="#fff"
            />

        <Spinner
            android:id="@+id/spinner_categoria"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:prompt="@string/spinner_title"
            />

    </LinearLayout>

    <!-- nome-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/info_text2"
            android:layout_width="89dp"
            android:layout_height="43dp"
            android:layout_marginStart="5dp"
            android:text="@string/nome"
            android:textAlignment="gravity"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="normal"
            android:layout_marginLeft="5dp" />

        <EditText
            android:id="@+id/edit_nomeServico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <!-- descrição-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/info_text3"
            android:layout_width="89dp"
            android:layout_height="43dp"
            android:layout_marginStart="5dp"
            android:text="@string/descricao"
            android:textAlignment="gravity"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="normal"
            android:layout_marginLeft="5dp" />

        <EditText
            android:id="@+id/edit_descServico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_cad_servico"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/adicionar"/>

</LinearLayout>
