<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="br.pe.recife.tafeito.gui.FornecedorPrincipalActivity">

    <LinearLayout
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:weightSum="1">

        <!-- Oferta -->
        <android.support.v7.widget.CardView
            android:id="@+id/card_view1"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="@color/primary_dark"
            card_view:cardCornerRadius="15dp">

            <TextView
                android:id="@+id/info_text1"
                android:text="@string/oferta"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="40dp"
                android:elevation="2dp"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:textStyle="bold"></TextView>
        </android.support.v7.widget.CardView>

        <!-- Agendamento -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="@color/primary_dark"
            card_view:cardCornerRadius="15dp">

            <TextView
                android:id="@+id/info_text4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="40dp"
                android:elevation="2dp"
                android:text="@string/agendamento"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>
        </android.support.v7.widget.CardView>

        <!-- Serviço -->
        <android.support.v7.widget.CardView
            android:id="@+id/card_view3"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="@color/primary_dark"
            card_view:cardCornerRadius="15dp"
            android:layout_weight="0.07">

            <TextView
                android:id="@+id/info_text2"
                android:text="@string/servico"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="40dp"
                android:elevation="2dp"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>
        </android.support.v7.widget.CardView>

        <!-- Sair -->
        <android.support.v7.widget.CardView
            android:id="@+id/card_view4"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="@color/primary_dark"
            card_view:cardCornerRadius="15dp"
            android:layout_weight="0.07">

            <TextView
                android:id="@+id/info_text5"
                android:text="@string/sair"
                android:layout_width="match_parent"
                android:elevation="2dp"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:textAlignment="center"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:textStyle="bold">
            </TextView>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
