<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/fragmentAgendamento"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_marginTop="10dp"
    tools:context="br.pe.recife.tafeito.gui.FragmentListaAgendamento">

    <!-- oferta-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/servico">
        </TextView>

        <TextView
            android:id="@+id/edit_nomeServico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="corte de cabelo">
        </TextView>
    </LinearLayout>

    <!-- hora e data-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0.00">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="189dp"
            android:layout_height="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/hora"
                android:id="@+id/textView">
            </TextView>
            <TextView
                android:id="@+id/edit_data"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="22:30">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/data">
            </TextView>

            <TextView
                android:id="@+id/edit_hora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="22/10/2017">
            </TextView>
        </LinearLayout>

    </LinearLayout>

    <!-- cliente-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp">
        </TextView>

        <TextView
            android:id="@+id/edit_nomeCliente"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Laís">
        </TextView>
    </LinearLayout>

</LinearLayout>
